# dio-vivo-labproject-fastapi

./: .flake8  pyproject.toml
alembic/versions/: 5685776b741c_.py
workout_api/: main.py  routers.py
workout_api/atleta/: controller.py  models.py
workout_api/categorias/: controller.py
workout_api/centro_treinamento/: controller.py
